update roles and jwt