@@ -2,6 +2,8 @@ package edu.cmart.entity;
 
 import edu.cmart.entity.enums.Gender;
 import jakarta.persistence.*;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -10,9 +12,8 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Collection;
-import java.util.Date;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @NoArgsConstructor
@@ -26,22 +27,26 @@ public class Account implements UserDetails {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
+    @NotBlank
     @Column(columnDefinition = "nvarchar(50) not null")
     private String fullname;
 
     @Column(columnDefinition = "varchar(50) unique")
     private String email;
 
+    @NotBlank
     @Column(columnDefinition = "varchar(255) not null")
     private String password;
 
+    @NotBlank
     @Column(columnDefinition = "varchar(255) not null")
     private String quickPassword;
 
+    @Size(min = 10, max = 10)
     @Column(columnDefinition = "varchar(10) not null unique")
     private String phoneNumber;
 
-    @Column(columnDefinition = "varchar(20) unique default '-1'")
+    @Column(columnDefinition = "varchar(20) unique")
     private String citizenIdentificationCard;
 
     @Enumerated(EnumType.STRING)
@@ -51,22 +56,29 @@ public class Account implements UserDetails {
     @Column(columnDefinition = "nvarchar(255)")
     private String image;
 
+    @Builder.Default
     @Column(nullable = false)
-    private Boolean isActivated;
+    private Boolean isActivated = true;
 
     @Column(nullable = false)
     @Temporal(TemporalType.DATE)
     private Date birthday;
 
-    @OneToMany(mappedBy = "account", cascade = CascadeType.ALL, fetch = FetchType.EAGER)
+    @OneToMany(mappedBy = "account",fetch = FetchType.LAZY, cascade = CascadeType.ALL)
     private Set<Role> roles;
+
+    public Account(String phoneNumber, Long accountId) {
+        this.phoneNumber = phoneNumber;
+        this.id = accountId;
+    }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-//        TypeRoles name = TypeRoles.values()[0];
-        return roles.stream()
-                .map(role -> new SimpleGrantedAuthority(role.getTypeRoles().name()))
-                .toList();
+        return roles
+                .stream()
+                .map(
+                    role -> new SimpleGrantedAuthority(role.getTypeRoles().name()))
+                .collect(Collectors.toList());
     }
 
     @Override
